--- a/workbook/site/Open-Access-Research/Exercises/index.html
+++ b/workbook/site/Open-Access-Research/Exercises/index.html
@@ -332,7 +332,7 @@
             <div class="section">
               
                 <h1 id="module-1-exercises">Module 1: Exercises</h1>
-<p><em>All 4 exercises are on this page. Remember to scroll!</em></p>
+<p><em>All 4 exercises are on this page. Remember to scroll! Push yourself to complete as many as you can. If these are not challening for you, there's an advanced one at the end.</em></p>
 <h2 id="exercise-1-learning-markdown-syntax-with-dillingerio-or-proseio">EXERCISE 1: learning markdown syntax with dillinger.io or prose.io</h2>
 <p>Have you ever fought with Word or another wordprocessor, trying to get things just <em>right</em>? Word processing is a mess. It conflates writing with typesetting and layout. Sometimes, you just want to get the words out. Othertimes, you want to make your writing as accessible as possible... but your intended recipient can't open your file, because they don't use the same wordprocessor. Or perhaps you wrote up some great notes that you'd love to have in a slideshow; but you can't, because copying and pasting preserves a whole lot of extra <em>gunk</em> that messes up your materials.</p>
 <p>The answer is to separate your <em>content</em> from your tool:</p>
