--- a/slides/index.html
+++ b/slides/index.html
@@ -41,17 +41,18 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>The HTML Presentation Framework</h3>
+					<h1>HIST3907o</h1>
+					<h3>The Final Project</h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>(Built with <a href="https://github.com/hakimel/reveal.js">reveal.js</a>, which was created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
 					</p>
 				</section>
 
 				<section>
-					<h2>Hello There</h2>
+					<h2>Goals</h2>
 					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
+						The point: demonstrate via your project mastery of the six modules in this course.
+						That is, you conceive, create, and document, a work of digital history that visualizes some argument about the past.
 					</p>
 				</section>
 
